Semantic/Parser.fsyacc.output
Output file describing compiled parser placed in Parser.fs and Parser.fsi
------------------------
states = 
state 0:
  items:
    _startstart ->  . start

  actions:
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'LT' (noprec):   error
    action 'LE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'ASTER' (noprec):   error
    action 'SLASH' (noprec):   error
    action 'MOD' (noprec):   error
    action 'NOT' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LSBR' (noprec):   error
    action 'RSBR' (noprec):   error
    action 'LCBR' (noprec):   error
    action 'RCBR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'ASSIGN' (noprec):   error
    action 'T_BYTE' (noprec):   error
    action 'T_ELSE' (noprec):   error
    action 'T_FALSE' (noprec):   error
    action 'T_IF' (noprec):   error
    action 'T_INT' (noprec):   error
    action 'T_PROC' (noprec):   error
    action 'T_REF' (noprec):   error
    action 'T_RETURN' (noprec):   error
    action 'T_WHILE' (noprec):   error
    action 'T_TRUE' (noprec):   error
    action 'T_EOF' (noprec):   error
    action 'ID' (noprec):   shift 11
    action 'STRING' (noprec):   error
    action 'INT' (noprec):   error
    action 'BYTE' (noprec):   error
    action 'error' (noprec):   shift 3
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto start: 1
    goto func_def: 2
    goto func_head: 4

state 1:
  items:
    _startstart -> start . 

  actions:
    action 'EQ' (noprec):   accept
    action 'NE' (noprec):   accept
    action 'LT' (noprec):   accept
    action 'LE' (noprec):   accept
    action 'GT' (noprec):   accept
    action 'GE' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'ASTER' (noprec):   accept
    action 'SLASH' (noprec):   accept
    action 'MOD' (noprec):   accept
    action 'NOT' (noprec):   accept
    action 'AND' (noprec):   accept
    action 'OR' (noprec):   accept
    action 'LPAREN' (noprec):   accept
    action 'RPAREN' (noprec):   accept
    action 'LSBR' (noprec):   accept
    action 'RSBR' (noprec):   accept
    action 'LCBR' (noprec):   accept
    action 'RCBR' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'COLON' (noprec):   accept
    action 'SEMICOLON' (noprec):   accept
    action 'ASSIGN' (noprec):   accept
    action 'T_BYTE' (noprec):   accept
    action 'T_ELSE' (noprec):   accept
    action 'T_FALSE' (noprec):   accept
    action 'T_IF' (noprec):   accept
    action 'T_INT' (noprec):   accept
    action 'T_PROC' (noprec):   accept
    action 'T_REF' (noprec):   accept
    action 'T_RETURN' (noprec):   accept
    action 'T_WHILE' (noprec):   accept
    action 'T_TRUE' (noprec):   accept
    action 'T_EOF' (noprec):   accept
    action 'ID' (noprec):   accept
    action 'STRING' (noprec):   accept
    action 'INT' (noprec):   accept
    action 'BYTE' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    start -> func_def . 

  actions:
    action 'EQ' (noprec):   reduce start --> func_def
    action 'NE' (noprec):   reduce start --> func_def
    action 'LT' (noprec):   reduce start --> func_def
    action 'LE' (noprec):   reduce start --> func_def
    action 'GT' (noprec):   reduce start --> func_def
    action 'GE' (noprec):   reduce start --> func_def
    action 'PLUS' (noprec):   reduce start --> func_def
    action 'MINUS' (noprec):   reduce start --> func_def
    action 'ASTER' (noprec):   reduce start --> func_def
    action 'SLASH' (noprec):   reduce start --> func_def
    action 'MOD' (noprec):   reduce start --> func_def
    action 'NOT' (noprec):   reduce start --> func_def
    action 'AND' (noprec):   reduce start --> func_def
    action 'OR' (noprec):   reduce start --> func_def
    action 'LPAREN' (noprec):   reduce start --> func_def
    action 'RPAREN' (noprec):   reduce start --> func_def
    action 'LSBR' (noprec):   reduce start --> func_def
    action 'RSBR' (noprec):   reduce start --> func_def
    action 'LCBR' (noprec):   reduce start --> func_def
    action 'RCBR' (noprec):   reduce start --> func_def
    action 'COMMA' (noprec):   reduce start --> func_def
    action 'COLON' (noprec):   reduce start --> func_def
    action 'SEMICOLON' (noprec):   reduce start --> func_def
    action 'ASSIGN' (noprec):   reduce start --> func_def
    action 'T_BYTE' (noprec):   reduce start --> func_def
    action 'T_ELSE' (noprec):   reduce start --> func_def
    action 'T_FALSE' (noprec):   reduce start --> func_def
    action 'T_IF' (noprec):   reduce start --> func_def
    action 'T_INT' (noprec):   reduce start --> func_def
    action 'T_PROC' (noprec):   reduce start --> func_def
    action 'T_REF' (noprec):   reduce start --> func_def
    action 'T_RETURN' (noprec):   reduce start --> func_def
    action 'T_WHILE' (noprec):   reduce start --> func_def
    action 'T_TRUE' (noprec):   reduce start --> func_def
    action 'T_EOF' (noprec):   reduce start --> func_def
    action 'ID' (noprec):   reduce start --> func_def
    action 'STRING' (noprec):   reduce start --> func_def
    action 'INT' (noprec):   reduce start --> func_def
    action 'BYTE' (noprec):   reduce start --> func_def
    action 'error' (noprec):   reduce start --> func_def
    action '#' (noprec):   reduce start --> func_def
    action '$$' (noprec):   reduce start --> func_def

  immediate action:   reduce start --> func_def
 gotos:

state 3:
  items:
    start -> 'error' . 

  actions:
    action 'EQ' (noprec):   reduce start --> 'error'
    action 'NE' (noprec):   reduce start --> 'error'
    action 'LT' (noprec):   reduce start --> 'error'
    action 'LE' (noprec):   reduce start --> 'error'
    action 'GT' (noprec):   reduce start --> 'error'
    action 'GE' (noprec):   reduce start --> 'error'
    action 'PLUS' (noprec):   reduce start --> 'error'
    action 'MINUS' (noprec):   reduce start --> 'error'
    action 'ASTER' (noprec):   reduce start --> 'error'
    action 'SLASH' (noprec):   reduce start --> 'error'
    action 'MOD' (noprec):   reduce start --> 'error'
    action 'NOT' (noprec):   reduce start --> 'error'
    action 'AND' (noprec):   reduce start --> 'error'
    action 'OR' (noprec):   reduce start --> 'error'
    action 'LPAREN' (noprec):   reduce start --> 'error'
    action 'RPAREN' (noprec):   reduce start --> 'error'
    action 'LSBR' (noprec):   reduce start --> 'error'
    action 'RSBR' (noprec):   reduce start --> 'error'
    action 'LCBR' (noprec):   reduce start --> 'error'
    action 'RCBR' (noprec):   reduce start --> 'error'
    action 'COMMA' (noprec):   reduce start --> 'error'
    action 'COLON' (noprec):   reduce start --> 'error'
    action 'SEMICOLON' (noprec):   reduce start --> 'error'
    action 'ASSIGN' (noprec):   reduce start --> 'error'
    action 'T_BYTE' (noprec):   reduce start --> 'error'
    action 'T_ELSE' (noprec):   reduce start --> 'error'
    action 'T_FALSE' (noprec):   reduce start --> 'error'
    action 'T_IF' (noprec):   reduce start --> 'error'
    action 'T_INT' (noprec):   reduce start --> 'error'
    action 'T_PROC' (noprec):   reduce start --> 'error'
    action 'T_REF' (noprec):   reduce start --> 'error'
    action 'T_RETURN' (noprec):   reduce start --> 'error'
    action 'T_WHILE' (noprec):   reduce start --> 'error'
    action 'T_TRUE' (noprec):   reduce start --> 'error'
    action 'T_EOF' (noprec):   reduce start --> 'error'
    action 'ID' (noprec):   reduce start --> 'error'
    action 'STRING' (noprec):   reduce start --> 'error'
    action 'INT' (noprec):   reduce start --> 'error'
    action 'BYTE' (noprec):   reduce start --> 'error'
    action 'error' (noprec):   reduce start --> 'error'
    action '#' (noprec):   reduce start --> 'error'
    action '$$' (noprec):   reduce start --> 'error'

  immediate action:   reduce start --> 'error'
 gotos:

state 4:
  items:
    func_def -> func_head . func_params compound_stmt
    func_def -> func_head . func_params local_def_list compound_stmt
    func_def -> func_head . func_params 'error'
    func_def -> func_head . func_params local_def_list 'error'

  actions:
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'LT' (noprec):   error
    action 'LE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'ASTER' (noprec):   error
    action 'SLASH' (noprec):   error
    action 'MOD' (noprec):   error
    action 'NOT' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'LPAREN' (noprec):   shift 14
    action 'RPAREN' (noprec):   error
    action 'LSBR' (noprec):   error
    action 'RSBR' (noprec):   error
    action 'LCBR' (noprec):   error
    action 'RCBR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'ASSIGN' (noprec):   error
    action 'T_BYTE' (noprec):   error
    action 'T_ELSE' (noprec):   error
    action 'T_FALSE' (noprec):   error
    action 'T_IF' (noprec):   error
    action 'T_INT' (noprec):   error
    action 'T_PROC' (noprec):   error
    action 'T_REF' (noprec):   error
    action 'T_RETURN' (noprec):   error
    action 'T_WHILE' (noprec):   error
    action 'T_TRUE' (noprec):   error
    action 'T_EOF' (noprec):   error
    action 'ID' (noprec):   error
    action 'STRING' (noprec):   error
    action 'INT' (noprec):   error
    action 'BYTE' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto func_params: 5

state 5:
  items:
    func_def -> func_head func_params . compound_stmt
    func_def -> func_head func_params . local_def_list compound_stmt
    func_def -> func_head func_params . 'error'
    func_def -> func_head func_params . local_def_list 'error'

  actions:
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'LT' (noprec):   error
    action 'LE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'ASTER' (noprec):   error
    action 'SLASH' (noprec):   error
    action 'MOD' (noprec):   error
    action 'NOT' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LSBR' (noprec):   error
    action 'RSBR' (noprec):   error
    action 'LCBR' (noprec):   shift 95
    action 'RCBR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'ASSIGN' (noprec):   error
    action 'T_BYTE' (noprec):   error
    action 'T_ELSE' (noprec):   error
    action 'T_FALSE' (noprec):   error
    action 'T_IF' (noprec):   error
    action 'T_INT' (noprec):   error
    action 'T_PROC' (noprec):   error
    action 'T_REF' (noprec):   error
    action 'T_RETURN' (noprec):   error
    action 'T_WHILE' (noprec):   error
    action 'T_TRUE' (noprec):   error
    action 'T_EOF' (noprec):   error
    action 'ID' (noprec):   shift 12
    action 'STRING' (noprec):   error
    action 'INT' (noprec):   error
    action 'BYTE' (noprec):   error
    action 'error' (noprec):   shift 9
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto func_def: 37
    goto func_head: 4
    goto local_def: 39
    goto local_def_list: 7
    goto var_def: 38
    goto compound_stmt: 6

state 6:
  items:
    func_def -> func_head func_params compound_stmt . 

  actions:
    action 'EQ' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'NE' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'LT' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'LE' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'GT' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'GE' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'PLUS' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'MINUS' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'ASTER' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'SLASH' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'MOD' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'NOT' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'AND' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'OR' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'LPAREN' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'RPAREN' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'LSBR' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'RSBR' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'LCBR' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'RCBR' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'COMMA' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'COLON' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'SEMICOLON' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'ASSIGN' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_BYTE' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_ELSE' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_FALSE' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_IF' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_INT' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_PROC' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_REF' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_RETURN' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_WHILE' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_TRUE' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'T_EOF' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'ID' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'STRING' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'INT' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'BYTE' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action 'error' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action '#' (noprec):   reduce func_def --> func_head func_params compound_stmt
    action '$$' (noprec):   reduce func_def --> func_head func_params compound_stmt

  immediate action:   reduce func_def --> func_head func_params compound_stmt
 gotos:

state 7:
  items:
    func_def -> func_head func_params local_def_list . compound_stmt
    func_def -> func_head func_params local_def_list . 'error'
    local_def_list -> local_def_list . local_def

  actions:
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'LT' (noprec):   error
    action 'LE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'ASTER' (noprec):   error
    action 'SLASH' (noprec):   error
    action 'MOD' (noprec):   error
    action 'NOT' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LSBR' (noprec):   error
    action 'RSBR' (noprec):   error
    action 'LCBR' (noprec):   shift 95
    action 'RCBR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'ASSIGN' (noprec):   error
    action 'T_BYTE' (noprec):   error
    action 'T_ELSE' (noprec):   error
    action 'T_FALSE' (noprec):   error
    action 'T_IF' (noprec):   error
    action 'T_INT' (noprec):   error
    action 'T_PROC' (noprec):   error
    action 'T_REF' (noprec):   error
    action 'T_RETURN' (noprec):   error
    action 'T_WHILE' (noprec):   error
    action 'T_TRUE' (noprec):   error
    action 'T_EOF' (noprec):   error
    action 'ID' (noprec):   shift 12
    action 'STRING' (noprec):   error
    action 'INT' (noprec):   error
    action 'BYTE' (noprec):   error
    action 'error' (noprec):   shift 10
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto func_def: 37
    goto func_head: 4
    goto local_def: 40
    goto var_def: 38
    goto compound_stmt: 8

state 8:
  items:
    func_def -> func_head func_params local_def_list compound_stmt . 

  actions:
    action 'EQ' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'NE' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'LT' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'LE' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'GT' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'GE' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'PLUS' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'MINUS' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'ASTER' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'SLASH' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'MOD' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'NOT' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'AND' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'OR' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'LPAREN' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'RPAREN' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'LSBR' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'RSBR' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'LCBR' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'RCBR' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'COMMA' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'COLON' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'SEMICOLON' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'ASSIGN' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_BYTE' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_ELSE' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_FALSE' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_IF' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_INT' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_PROC' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_REF' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_RETURN' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_WHILE' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_TRUE' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'T_EOF' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'ID' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'STRING' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'INT' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'BYTE' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action 'error' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action '#' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt
    action '$$' (noprec):   reduce func_def --> func_head func_params local_def_list compound_stmt

  immediate action:   reduce func_def --> func_head func_params local_def_list compound_stmt
 gotos:

state 9:
  items:
    func_def -> func_head func_params 'error' . 

  actions:
    action 'EQ' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'NE' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'LT' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'LE' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'GT' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'GE' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'PLUS' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'MINUS' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'ASTER' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'SLASH' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'MOD' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'NOT' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'AND' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'OR' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'LPAREN' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'RPAREN' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'LSBR' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'RSBR' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'LCBR' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'RCBR' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'COMMA' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'COLON' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'SEMICOLON' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'ASSIGN' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_BYTE' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_ELSE' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_FALSE' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_IF' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_INT' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_PROC' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_REF' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_RETURN' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_WHILE' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_TRUE' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'T_EOF' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'ID' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'STRING' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'INT' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'BYTE' (noprec):   reduce func_def --> func_head func_params 'error'
    action 'error' (noprec):   reduce func_def --> func_head func_params 'error'
    action '#' (noprec):   reduce func_def --> func_head func_params 'error'
    action '$$' (noprec):   reduce func_def --> func_head func_params 'error'

  immediate action:   reduce func_def --> func_head func_params 'error'
 gotos:

state 10:
  items:
    func_def -> func_head func_params local_def_list 'error' . 

  actions:
    action 'EQ' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'NE' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'LT' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'LE' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'GT' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'GE' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'PLUS' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'MINUS' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'ASTER' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'SLASH' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'MOD' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'NOT' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'AND' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'OR' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'LPAREN' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'RPAREN' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'LSBR' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'RSBR' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'LCBR' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'RCBR' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'COMMA' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'COLON' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'SEMICOLON' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'ASSIGN' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_BYTE' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_ELSE' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_FALSE' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_IF' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_INT' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_PROC' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_REF' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_RETURN' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_WHILE' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_TRUE' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'T_EOF' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'ID' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'STRING' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'INT' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'BYTE' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action 'error' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action '#' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'
    action '$$' (noprec):   reduce func_def --> func_head func_params local_def_list 'error'

  immediate action:   reduce func_def --> func_head func_params local_def_list 'error'
 gotos:

state 11:
  items:
    func_head -> 'ID' . 
